<resources>
    <string name="app_name">Placefy</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_adm">AdmActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Name</string>
    <string name="nav_header_subtitle">Email</string>
    <string name="nav_header_desc">Profile</string>
    <string name="action_logout">Sair</string>

    <string name="title_home">Administrativo</string>
    <string name="menu_home">Início</string>
    <string name="menu_users">Todos os Usuários</string>
    <string name="menu_users_approve">Aprovar Usuários</string>
    <string name="menu_plans">Planos</string>
    <string name="menu_properties">Propriedades</string>
    <string name="title_activity_admin">AdminActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drop_profile">Qual seu perfil?</string>
    <string name="creci">CRECI</string>
    <string name="nome">Nome</string>
    <string name="complement">Complemento</string>
    <string name="cep">CEP</string>
    <string name="cpf">CPF</string>
    <string name="addressLine">Rua</string>
    <string name="passwordConfirmation">Confirmação de Senha</string>
    <string name="rg">RG</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="birthDate">Data de nascimento</string>
    <string name="phone">Telefone</string>
    <string name="number">Número</string>
    <string name="suburb">Bairro</string>
    <string name="cidade">Cidade</string>
    <string name="state">Estado</string>
    <string name="signUpArea">Área de cadastro</string>
    <string name="SignUp">Cadastrar</string>
    <string name="cancel">Cancelar</string>
    <string name="company_name">Razão social</string>
    <string name="fantasyCompanyName">Nome Fantasia</string>
    <string name="cnpj">CNPJ</string>
    <string name="ie">IE</string>
    <string name="socialName">Razão Social</string>
</resources>