<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_users">

    <fragment
        android:id="@+id/nav_users"
        android:name="com.placefy.app.activities.ui.admin.users.UsersFragment"
        android:label="@string/menu_users"
        tools:layout="@layout/fragment_users" />

    <fragment
        android:id="@+id/nav_users_approve"
        android:name="com.placefy.app.activities.ui.admin.usersToApprove.UsersApproveFragment"
        android:label="@string/menu_users_approve"
        tools:layout="@layout/fragment_properties" />

    <fragment
        android:id="@+id/nav_plans"
        android:name="com.placefy.app.activities.ui.admin.plans.PlansFragment"
        android:label="@string/menu_plans"
        tools:layout="@layout/fragment_users_approve" />
    <fragment
        android:id="@+id/nav_properties"
        android:name="com.placefy.app.activities.ui.admin.properties.PropertyFragment"
        android:label="@string/menu_properties"
        tools:layout="@layout/fragment_property" />
</navigation>